# algos

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  flake.nix  justfile  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  shell.nix
advent-of-code/2023/: day-1.py  utils.py
algos/clrs-introduction-to-algorithms/21-disjoint-sets/disjoint_set/: flake.nix  meson.build
algos/clrs-introduction-to-algorithms/21-disjoint-sets/disjoint_set/inc/: disjoint_set.h
algos/clrs-introduction-to-algorithms/21-disjoint-sets/disjoint_set/src/: main.c
algos/clrs-introduction-to-algorithms/21-disjoint-sets/disjoint_set/test/: test_basic_operations.c  test_complex_scenarios.c  test_main.c  test_union_operations.c
algos/cracking-the-coding-interview/: 1-1-is-unique.py  1-2-check-permutation.py  1-3-url-encode-string-spaces.py  1-4-palindrome-permutation.py  1-5-one-away.py  1-6-string-compression.py  1-7-rotate-matrix.py
algos/daily-coding-problems/: 0970.py  0971.py  0977.py  0978.py  0979.py  0980.py  0981.py  0982.py  0983.py  0984(2).py  0984.py  0985.py  0986.py  0987.py  0988.py  0989.py  0990.py  0991.py  0992.py  0993.py  0994.py  0995.py  0996.py  0997.py  0998.py  1002.py  1003.py  1006.py  1014.py  1027.py  1028.py  1052.py  1132.py  1150.py  1151.py  1152.py  1154.py  1155.py  1156.py  1157.py  (+4 more)
algos/data-structures/heaps/binomial-heap/: flake.nix  meson.build
algos/data-structures/heaps/binomial-heap/inc/: binomial-heap.h
algos/data-structures/heaps/binomial-heap/src/: binomial-heap.c
algos/data-structures/heaps/binomial-heap/test/: test_main.c
algos/data-structures/heaps/fibonacci/: meson.build  pyproject.toml
algos/data-structures/heaps/fibonacci/src/: heap.c  heap.h  utils.h
algos/data-structures/heaps/fibonacci/tests/: test_heap.c
algos/data-structures/queues/ring-buffer/: pyproject.toml  setup.py  tests.py
algos/data-structures/queues/ring-buffer/src/: buffer.c  buffer.h  ring_buffer_module.c
algos/functional/: continuation.py
algos/leetcode/: 0003-longest-substring-without-repeating-chars.py  0010-regular-expression-matching.py  0016-three-sum-closest.py  0018-four-sum.py  0019-remove-nth-node-from-end.py  0025-reverse-nodes-in-k-groups.py  0026-find-index-of-first-occurrence-string.py  0029-divide-two-integers.py  0030-substring-all-concatenation.py  0031-next-permutation.py  0034-find-first-and-last-position-in-sorted-array.py  0035-search-insert-position.py  0041-first-missing-positive.py  0042-trapping-rainwater.py  0046-permutations.py  0047-permutations-ii.py  0073-edit-distance.py  0076-minimum-window-substring.py  0088-merge-sorted-arrays.py  0208-implement-trie.py  0212-word-search-ii.py  0236-lowest-common-ancestor-binary-tree.py  0239-sliding-window-max.py  0287-find-duplicate-number.py  0300-longest-increasing-subsequence.py  0323-connected-components-in-undirected-graph.py  0454-four-sum-ii.py  0786-inorder-traversal.py  1143-longest-common-subsequence.py  1498-number-of-subsequences-satisfy-given-sum-condition.py  gas-can-complete-circuit.cpp  h-index.cpp  jump-game-ii.py  majority-element.py  merge-k-sorted-lists.cpp  myatoi.cpp  remove-duplicates-from-sorted-list-ii.py  remove-duplicates-from-sorted-list.py  remove-element.py  zigzag-conversion.cpp  (+1 more)
algos/nlp/: bag-of-words.py
algos/search/: knuth-morris-pratt.py  rabin-karp.py  rb_chunking.py  suffix-array-doubling.py
bitwise/: unique_element_1.py
challenges/: 0998.py  986.py  rename.py
challenges/0000/: solution.py
challenges/0017/: tmp
challenges/1000/: challenge.md
challenges/solutions/: 0988.py  0996.py  1002.py  1003.py  990.py  993.py  994.py  997.py
clrs-introduction-to-algorithms/16-greedy-algorithms/: .gitignore  huffman_codes.py
clrs-introduction-to-algorithms/4-divide-and-conquer/: 4-1-4.py  maximum-subarray.cpp
cracking-the-coding-interview/: url-encode-string-spaces.py
daily-coding-problems/: 0006.py  0615.py  0974.py  0983.py  0985.py  0987.py  0992.py  0995.py  1027.py  1132.py  1155.py  1157.py
daily-coding-problems/0014/: makefile
daily-coding-problems/0015/: problem.md
daily-coding-problems/0032/: rates.csv  rates3.csv  solution.py
data-structures/graphs/: bellman-ford.py
data-structures/linked-list/: intersection-in-o(n).py
introduction-to-algorithms/: 4-1-4.py  4-1-5.py
introduction-to-algorithms/16-greedy-algorithms/: 1-0-knapsack.py  choosing-activities-grouping-by-end-time.py  choosing-activities-grouping-by-overlaps(wrong).py  choosing-activities.py
introduction-to-algorithms/data-structures/: linked-list-main.c  linked-list.c  main
introduction-to-algorithms/dynamic-programming/: lcs-2.py  lcs.py  matrix_chain.py  rod_cutting.py
introduction-to-algorithms/math/: binet.py
leetcode/: 0012-roman-numerals.py  0088 - merge sorted arrays.py  0208 - implement trie.py  0786 - inorder traversal.py  786.py  88.py  gas-can-complete-circuit.cpp  makefile  median-two-sorted-arrays.cpp  median-two-sorted-arrays.py  remove-duplicates-from-sorted-list-ii.py  remove-duplicates-from-sorted-list.py  rotate-array.py  zigzag-traversal.py
leetcode/median-two-sorted-arrays/: analysis.py  generate_inputs.py  median-two-sorted-arrays.hpp  results.txt  solution  solution.cpp  timeit  timeit.cpp
math/bitwise/: unique_element_1.py
mathematics/bitwise/: unique_element_2.py
mathematics/combinatorics/: combinations.py
mathematics/linear-algebra/: gram-schmidt.py
mathematics/numerical/: newton_raphson.py
nixpkgs/: asciichartpy.nix
solutions/: 0032.py  0972.py  0973.py  0975.py  0976.py  0977.py  0978.py  0980.py  0981.py  0982.py  0984.py  0987.py  0989.py  1004.py  1005.py  1006.py  1014.py  1028.py  1151.py  1152.py  1155.py  1156.py  1157.py  1158.py  969.py
solutions/0011/: test.py
solutions/0013/: solution.py
solutions/0014/: test.py
solutions/0015/: solution.py
solutions/10/: solution.py
solutions/11/: solution.py  words_list
solutions/12/: test.py
solutions/3/: test.py
sorting/: bubblesort.py  counting.py  countsort.py  kahn.py  partition.py
statistics/: box_muller.py  partition.py
(+392 files in other folders)
