[tool.poetry]
name = "daily_coding_solutions"
version = "0.1.0"
description = ""
authors = ["Moyewa Odiase <moyeodiase@hotmail.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
