[project]
name = "algos"
version = "0.1.0"
description = "Assorted algorithms and experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asciichartpy>=1.5.25",
  "autopep8>=2.3.2",
  "bidict>=0.23.1",
  "click>=8.1.8",
  "flake8>=7.1.2",
  "graphviz>=0.20.3",
  "ipython>=9.0.2",
  "loguru>=0.7.3",
  "matplotlib>=3.10.1",
  "more-itertools>=10.6.0",
  "networkx>=3.4.2",
  "numpy>=2.2.4",
  "plotly>=6.0.1",
  "pytest>=8.3.5",
  "ruff>=0.11.2",
  "sortedcollections>=2.1.0",
  "tabulate>=0.9.0",
  "taplo>=0.9.3",
]

[tool.setuptools]
packages = ["algos"]